--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ body {
 /* MAIN PAGE */
 
 .main {
-  margin: 100px 0 100px 0;
+  margin: 100px 0 0 0;
   width: 100%;
   height: 100%;
 }
@@ -104,6 +104,10 @@ body {
 }
 .name {
   font-weight: 700;
+}
+.scroll-devide {
+  width: 100%;
+  height: 85px;
 }
 
 /* FOOTER */
