--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,6 @@ body {
   color: #696969;
   border: none;
 }
-.vanish {
-  display: none;
-}
 
 /* HEADER */
 
@@ -128,12 +125,84 @@ body {
 }
 .input {
   outline: none;
-  font-size: 26px;
   border: none;
+  font-size: 22px;
+  line-height: 40px;
   font-style: italic;
+  width: 320px;
 }
 .input::placeholder {
   color: #000000;
+}
+.who-is-listening {
+  font-family: roboto;
+  font-size: 14px;
+  line-height: 20px;
+  color: #505050;
+}
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* SIDEBAR */
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 259px;
+  height: 100%;
+  background-color: #ffffff;
+  font-family: roboto;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  padding: 0 16px 0 16px;
+}
+.sidebar ion-icon {
+  font-size: 20px;
+}
+.sidebar .public,
+.sidebar .private,
+.user,
+.user .left,
+.users-header,
+.visibility-header,
+.public .left,
+.private .left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 36px;
+  background: #ffffff;
+}
+.visibility-header,
+.users-header {
+  height: 66px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  text-align: center;
+}
+.check {
+  display: none;
+}
+.users {
+  overflow-y: scroll;
+}
+.gray-background {
+  position: fixed;
+  top: 0;
+  right: 259px;
+  height: 100%;
+  width: calc(100vw - 259px);
+  background: rgba(0, 0, 0, 0.6);
+}
+.selected .check {
+  display: flex;
 }
 
 /* roboto 400, 700 e 400 italic */
@@ -153,4 +222,8 @@ body {
   font-family: roboto;
   src: url(../assets/fonts/Roboto-Bold.ttf);
   font-weight: 700;
+}
+
+.vanish {
+  display: none;
 }
