--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: roboto;
+  font-size: 18px;
 }
-.login-page img {
+.logo {
   width: 130px;
   height: 92px;
   margin: 13vh 0 16vh 0;
@@ -48,6 +50,16 @@ body {
   background: #e7e7e7;
   color: #696969;
   border: none;
+}
+.loading img {
+  width: 120px;
+  height: 82px;
+  margin-bottom: 3vh;
+}
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* HEADER */
@@ -129,7 +141,7 @@ body {
   font-size: 22px;
   line-height: 40px;
   font-style: italic;
-  width: 320px;
+  width: calc(100vw - 90px);
 }
 .input::placeholder {
   color: #000000;
