--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ body {
 /* MAIN PAGE */
 
 .main {
-  margin: 100px 0 0 0;
+  margin: 100px 0 85px 0;
   width: 100%;
   height: 100%;
 }
@@ -113,10 +113,6 @@ body {
 }
 .name {
   font-weight: 700;
-}
-.scroll-devide {
-  width: 100%;
-  height: 85px;
 }
 
 /* FOOTER */
