--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,10 @@ body {
 /* MAIN PAGE */
 
 .main {
-  margin: 100px 0 85px 0;
+  margin: 82px 0 0 0;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 162px);
+  overflow: scroll;
 }
 .message {
   background: white;
@@ -147,12 +148,18 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #505050;
-
-  width: 330px;
+  width: calc(100vw - 90px);
   height: 20px;
+  overflow: hidden;
+  word-break: break-all;
   text-overflow: ellipsis;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  white-space: nowrap;
+  display: flex;
+}
+.who-is-listening div {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .footer-left {
   display: flex;
@@ -165,7 +172,7 @@ body {
 .sidebar {
   position: fixed;
   top: 0;
-  right: 0;
+  right: -259px;
   width: 259px;
   height: 100%;
   background-color: #ffffff;
@@ -174,6 +181,15 @@ body {
   flex-direction: column;
   font-size: 16px;
   padding: 0 16px 0 16px;
+  transition: 0.4s;
+  z-index: 2;
+}
+.sidebar-show{
+  position: fixed;
+  top: 0;
+  right: 0;
+  transition: 0.4s;
+  z-index: 2;
 }
 .sidebar ion-icon {
   font-size: 20px;
@@ -211,17 +227,16 @@ body {
 }
 .username{
   width: 185px;
-  max-height: 18px;
-  text-overflow: clip;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .gray-background {
   position: fixed;
   top: 0;
-  right: 259px;
+  right: 0;
   height: 100%;
-  width: calc(100vw - 259px);
+  width: 100%;
   background: rgba(0, 0, 0, 0.6);
 }
 .selected .check {
